# pattern-recognition-lab

./: README.md  example.py  ml.py  pyproject.toml  requirements.txt
