[tool.poetry]
name = "pattern recognition lab"
version = "0.1.0"
description = ""
authors = ["Michail Papamichail <mapamic@issel.ee.auth.gr>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.2"
matplotlib = "^3.2.0"
pandas = "^1.0.2"
scikit_learn = "^0.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
